--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main id="contentList">
       <div class="headline">Para os amantes de história </div>
       <h2>Descubra 3 destinos imperdíveis em Busan</h2>
-      <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos. Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.</p>
+      <p class="titleList">As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos. Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.</p>
      
       <div class="cardTravel">
        <img src="./images/Image_02.jpg" alt="Templo Haedong Yonggungsa">
@@ -33,8 +33,9 @@
           <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar - você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro.</p>
         </br>
           <strong>Bom para:</strong>
-           <li class="accent-blue">História</li>       
-        </div>
+          <ul>
+          <li>História</li>
+          </ul>
       </div>
 
       <div class="cardTravel">
@@ -42,8 +43,11 @@
          <div class="contentCard">
            <h3>2. Templo Beomeo-sa</h3>
            <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.</p>
+         </br>
            <strong>Bom para:</strong>
-           <li class="accent-blue">História</li>
+           <ul>
+           <li>História</li>
+          </ul>
           </div>
 
        <div class="cardTravel">
@@ -51,10 +55,13 @@
          <div class="contentCard">
            <h3>3. Parque Yongdusan</h3>
            <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.</p>
+          </br>
            <strong>Bom para:</strong>
-           <li class="accent-purple">Casais</li>
-           <li class="accent-pink">Famílias</li>
-           <li class="accent-orange">Orçamento</li>
+           <ul>
+           <li>Casais</li>
+           <li>Famílias</li>
+           <li>Orçamento</li>
+          </ul>
          </div>
        </div>
   </main>
