--- a/index.html
+++ b/index.html
@@ -70,11 +70,9 @@
 
   <footer>
     <p>As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo.</p>
-   
-    <div>Feito com
-      <img src="./images/heart.svg" alt="ícone de um coraçãozinho">
-    pela Rocketseat</div>
-    
+   <div>
+    Feito com<img src="./images/heart.svg" alt="ícone de um coraçãozinho">pela Rocketseat
+  </div>
   </footer>
   </div>   
 
